<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/movieThumbnailID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tint="#918b8b"
                android:transitionName="imageTransition"
                android:tintMode="multiply" />

            <ImageView
                android:id="@+id/play_icon_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_play_circle_outline_black_24dp" />

            <TextView
                android:id="@+id/shareTrailerID"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:fontFamily="serif"
                android:text="SHARE"
                android:textAlignment="center"
                android:textColor="#FFEE"
                android:textSize="13sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/md_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="start"
                android:text="THOR"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/md_vote_avg_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/rating_default_text"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/md_adult_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/adult_default"
                android:textSize="10sp" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:text="|"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/md_release_date_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"

                android:text="12 June, 2018"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/md_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/votes_default_text"
                android:textSize="13sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardview_dark_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/md_reviews_id"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:text="@string/reviews"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/favouriteID"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="#0000"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/favourite"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/md_overview_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="overview"
            android:transitionName="overviewTransition"
            android:textAlignment="inherit"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/cardview_dark_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/trailers"
            android:textSize="13sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailers_recyclerViewid"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</ScrollView>